# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "sandlertools"
version = "0.3.0"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "A metapackage combining several computational tools based on Chemical, Biochemical, and Engineering Thermodynamics (5th edition) by Stan Sandler"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "scipy",
    "sandlercubics",
    "sandlercorrespondingstates",
    "sandlersteam",
    "sandlerprops",
    "sandlermisc",
    "sandlerchemeq"
]

[tool.pytest.ini_options]
log_cli = true

[tool.hatch.build.targets.wheel]
packages = ["src/sandlertools"]

[project.scripts]
sandlertools="sandlertools.cli:cli"

[tool.hatch.build]
include = [
  "src/sandlertools/data/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/sandlertools/**",
]